Restore philanthropy.html content

--- a/public/philanthropy.html
+++ b/public/philanthropy.html
@@ -31,8 +31,9 @@
 <hr>
 
 <footer>
-    <a href="./public/contact.html">Contact Me</a>
+    <a href="./contact.html">Contact Me</a>
     <p>
         © 2025 Austin Zborek. All rights reserved.
     </p>
 </footer>
+
